--- a/docs/.vuepress/styles/index.scss
+++ b/docs/.vuepress/styles/index.scss
@@ -4,3 +4,11 @@
 :root {
   scroll-behavior: smooth;
 }
+* {
+  box-sizing: border-box
+}
+
+.custom-container {
+  border-left: none !important;
+  border-radius: .5rem;
+}
