--- a/docs/.vuepress/styles/palette.scss
+++ b/docs/.vuepress/styles/palette.scss
@@ -53,8 +53,8 @@
   --code-ln-wrapper-width: 3.5rem;
 
   // font vars
-  --font-family: 'Quicksand', sans-serif;
-  --font-family-code: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
+  --font-family: "Quicksand", sans-serif;
+  --font-family-code: Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
 
   // layout vars
   --navbar-height: 3.6rem;
@@ -122,7 +122,6 @@
   --search-item-focus-bg-color: var(--c-bg-light);
 }
 
-
 //DARK THEME
 html.dark {
   // brand colors
@@ -165,8 +164,8 @@ html.dark .DocSearch {
   --docsearch-logo-color: var(--c-text);
   --docsearch-modal-shadow: inset 1px 1px 0 0 #2c2e40, 0 3px 8px 0 #000309;
   --docsearch-key-shadow: inset 0 -2px 0 0 #282d55, inset 0 0 1px 1px #51577d,
-  0 2px 2px 0 rgba(3, 4, 9, 0.3);
+    0 2px 2px 0 rgba(3, 4, 9, 0.3);
   --docsearch-key-gradient: linear-gradient(-225deg, #444950, #1c1e21);
   --docsearch-footer-shadow: inset 0 1px 0 0 rgba(73, 76, 106, 0.5),
-  0 -4px 8px 0 rgba(0, 0, 0, 0.2);
+    0 -4px 8px 0 rgba(0, 0, 0, 0.2);
 }
