--- a/docs/.vuepress/styles/index.scss
+++ b/docs/.vuepress/styles/index.scss
@@ -4,12 +4,13 @@
 
 :root {
   scroll-behavior: smooth;
+  --content-width: 1000px;
 }
 * {
   box-sizing: border-box;
 }
 
-.custom-container {
+.hint-container {
   border-left: none !important;
   border-radius: 0.5rem;
   position: relative;
