fix: dot examples
Signed-off-by: Sergej Atamantschuk <sergejatam@gmail.com>

--- a/.vitepress/theme/style.css
+++ b/.vitepress/theme/style.css
@@ -149,3 +149,8 @@
     color: var(--vp-c-green-1);
     background-color: var(--vp-c-green-soft);
 }
+
+.guide-introduction-labels p{
+    display: flex;
+    justify-content: start;
+}
